--- a/Demo Apps/Week 6/WeeklyWeather/WeeklyWeather/WeeklyWeather.csproj
+++ b/Demo Apps/Week 6/WeeklyWeather/WeeklyWeather/WeeklyWeather.csproj
@@ -30,6 +30,14 @@
   <ItemGroup>
     <EmbeddedResource Include="App.xaml" />
     <EmbeddedResource Include="WeeklyWeatherPage.xaml" />
+    <EmbeddedResource Include="WeatherForDayPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WeatherSummaryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -39,6 +47,13 @@
       <DependentUpon>WeeklyWeatherPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherForDayPage.xaml.cs">
+      <DependentUpon>WeatherForDayPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WeatherDetails.cs" />
+    <Compile Include="WeatherSummaryPage.xaml.cs">
+      <DependentUpon>WeatherSummaryPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
