--- a/Demo Apps/Week 6/MyRunner/Droid/MyRunner.Droid.csproj
+++ b/Demo Apps/Week 6/MyRunner/Droid/MyRunner.Droid.csproj
@@ -132,6 +132,13 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\number2.png" />
+    <AndroidResource Include="Resources\drawable\runner1.png" />
+    <AndroidResource Include="Resources\drawable\runner2.png" />
+    <AndroidResource Include="Resources\drawable\runner3.png" />
+    <AndroidResource Include="Resources\drawable\runnerFinish.png" />
+    <AndroidResource Include="Resources\drawable\number1.png" />
+    <AndroidResource Include="Resources\drawable\number3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
