--- a/Demo Apps/Week 6/MyRunner/Droid/Properties/AndroidManifest.xml
+++ b/Demo Apps/Week 6/MyRunner/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="edu.fvtc.sheleski.brett.MyRunner">
-	<uses-sdk />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="edu.fvtc.sheleski.brett.MyRunner" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" />
 	<application android:label="MyRunner" android:theme="@android:style/Theme.Material.Light"></application>
 </manifest>
