--- a/Demo Apps/Week 9/DemoAsyncAwait/DemoAsyncAwait/DemoAsyncAwait.csproj
+++ b/Demo Apps/Week 9/DemoAsyncAwait/DemoAsyncAwait/DemoAsyncAwait.csproj
@@ -38,7 +38,13 @@
     <Compile Include="DemoAsyncAwaitPage.xaml.cs">
       <DependentUpon>DemoAsyncAwaitPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DownloadAsynchronousPage.xaml.cs">
+      <DependentUpon>DownloadAsynchronousPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DownloadHelper.cs" />
+    <Compile Include="DownloadSynchronousPage.xaml.cs">
+      <DependentUpon>DownloadSynchronousPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +60,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DownloadSynchronousPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DownloadAsynchronousPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
