--- a/Demo Apps/Week 9/FeedReader/FeedReader/FeedReader/FeedReader.csproj
+++ b/Demo Apps/Week 9/FeedReader/FeedReader/FeedReader/FeedReader.csproj
@@ -9,11 +9,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FeedReader.Core\FeedReader.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="App.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="MainPage.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="FeedListMvvm\FeedListMvvmPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
