--- a/Demo Apps/Supplementary/WeatherHub/WeatherHub.Xamarin/WeatherHub.Xamarin.Android/WeatherHub.Xamarin.Android.csproj
+++ b/Demo Apps/Supplementary/WeatherHub/WeatherHub.Xamarin/WeatherHub.Xamarin.Android/WeatherHub.Xamarin.Android.csproj
@@ -90,7 +90,6 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WeatherHub\WeatherHub.csproj">
@@ -101,6 +100,9 @@
       <Project>{2196DD3A-A561-4FDF-83CD-FB427503766E}</Project>
       <Name>WeatherHub.Xamarin</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
