--- a/Demo Apps/Week 12/WhereIsMe/WhereIsMe/WhereIsMe.iOS/WhereIsMe.iOS.csproj
+++ b/Demo Apps/Week 12/WhereIsMe/WhereIsMe/WhereIsMe.iOS/WhereIsMe.iOS.csproj
@@ -148,12 +148,15 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\WhereIsMe\WhereIsMe.csproj">
-      <Project>{FC71D61B-7F8C-4F41-B2C6-405F09DFB82E}</Project>
+      <Project>{5DFC5066-DB77-4EBA-A17F-176421658EA2}</Project>
       <Name>WhereIsMe</Name>
     </ProjectReference>
   </ItemGroup>
