added ios renderer

--- a/Demo Apps/Supplementary/CustomViews/CustomViews/CustomViews.iOS/CustomViews.iOS.csproj
+++ b/Demo Apps/Supplementary/CustomViews/CustomViews/CustomViews.iOS/CustomViews.iOS.csproj
@@ -94,6 +94,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\RoundedImageRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -152,8 +153,11 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\CustomViews\CustomViews.csproj">
-      <Project>{400055D7-1614-4D31-BC44-40681AF822CC}</Project>
+      <Project>{E65ECE08-C8A2-4681-8C8E-08F9EEB9E027}</Project>
       <Name>CustomViews</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Renderers\" />
   </ItemGroup>
 </Project>
